--- a/frontend/src/components/Spots/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails.css
@@ -189,6 +189,7 @@
     position: absolute;
     bottom: 24px;
     right: 24px;
+    background-color: white;
 }
 
 .fa-solid.fa-ellipsis-vertical {
